@@ -202,6 +202,28 @@ class IMP_Hooks
     }
 
 
+
+    /**
+     * Checks the raw text of the outoging compose message for words that
+     * might indicate an attachment is present, and issues a warning if no
+     * attachments are indeed present.
+     *
+     * If this hook is not defined, this check is not performed.
+     *
+     * This hook is run at most once per message.
+     *
+     * @return array  A list of words to search for in the body text.
+     */
+//     public function attach_body_check($body)
+//     {
+//         /* List of words to search for. */
+//         return array(
+//             'attachment', 'attached'
+//         );
+//     }
+
+
+
     /**
      * Perform an action before a message has been sent.
      *
@@ -232,26 +254,6 @@ class IMP_Hooks
 //
 //        foreach ($custom_hdrs as $key => $val) {
 //            $headers->addHeader($key, $val);
-//        }
-//
-//
-//        // Example #2: Check for forgotten attachments when sending.
-//        if (!count($compose) &&
-//            !$GLOBALS['session']->get('imp', 'attach_check/' . strval($compose))) {
-//            /* List of words to search for. */
-//            $word_list = array(
-//                'attachment', 'attached'
-//            );
-//
-//            /* Check the plaintext version of the message. */
-//            $imp_contents = new IMP_Contents($message);
-//            if (($body_id = $imp_contents->findBody()) &&
-//                preg_match('/\b(' . implode('|', array_map('preg_quote', $word_list)) . ')\b/i', $imp_contents->getMIMEPart($body_id)->getContents(), $matches)) {
-//                // Set flag in the session to indicate this message should
-//                // not be checked for attachments again.
-//                $GLOBALS['session']->set('imp', 'attach_check/' . strval($compose), 1);
-//                throw IMP_Compose_Exception::createAndLog('DEBUG', 'Found the word "' . $matches[1] . '" in the message text although there are no files attached to the message. Did you forget to attach a file? (This check will not be performed again for this message.)');
-//            }
 //        }
 //    }
 
